--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,9 @@ img{
     position: absolute;
     left: 50%;
     height: 50%;
+    margin-left: -50vw;
+    z-index: -1000;
+    bottom: -1px;
 }
 
 .shape-divider{
@@ -387,4 +390,21 @@ img{
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: -2;
+    bottom: 0;
+}
+
+.subtitle{
+    font-family: var(--fuente);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: .5px;
+    border-radius: 5px;
+    margin-bottom: 12px;
+    background: linear-gradient(120deg, #074362 20.70%, #229ad7 50.10%, #9b9b9b 75.50%);
+    -webkit-background-clip: text;
+    background-clip: #074362;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
 }
