--- a/css/style.css
+++ b/css/style.css
@@ -663,6 +663,147 @@ img{
     transform: scale(1.1);
 }
 
+/* footer */
+#page-footer{
+    background:var(--colorFooter);
+    color: #fff;
+}
+
+#page-footer a{
+    color: #fff;
+}
+
+#page-footer .container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    padding: 40px 0;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+}
+
+.footer__cta-container{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content:center;
+    flex-wrap: nowrap;
+    padding: 70px 0;
+}
+
+.footer__cta-container:after{
+    position: absolute;
+    max-width: 1230px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    background-color: #fff;
+}
+
+.footer__cta-container .cta__text{
+    margin: 0;
+    color: #fff;
+    font-family: var(--fuente);
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 0 15px;
+}
+
+.footer__cta-container .cta__button{
+    color: #fff;
+    display: inline-block;
+    margin-top: 30px;
+    border: 2px solid #fff;
+    border-radius: 500px;
+    padding: 25px 60px;
+    font-weight: 700;
+    background-size: 100% 100%;
+    transition: all .4s ease-in-out;
+    background-color:transparent;
+}
+
+.footer__cta-container .cta__button:hover{
+    border-color: #0c4195;
+    background-color: #fff;
+    color: #0c0c0c;
+}
+
+.footer__menu{
+    padding: 0 15px;
+}
+
+.footer__logo{
+    width: 100%;
+}
+
+.ft-social-row{
+    text-align: center;
+}
+
+.ft-social{
+    display: inline-block;
+    border-radius: 100%;
+    border: 0;
+    width: 30px;
+    height: auto;
+    font-size: 16px;
+}
+
+.footer__menu figure{
+    margin: 0 auto;
+    width: 80%;
+    padding: 0;
+}
+
+.ft-link{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer__link:nth-child(1){
+    border-left: 3px solid #e0b20c;
+}
+
+.footer__link:nth-child(2){
+    border-left: 3px solid #ea250b;
+}
+
+.footer__link:nth-child(3){
+    border-left: 3px solid #34db06;
+}
+
+.footer__link:nth-child(4){
+    border-left: 3px solid #354c89;
+}
+
+.footer__link:nth-child(5){
+    border-left: 3px solid #5c2468;
+}
+
+.footer__link a{
+    text-decoration: none;
+}
+
+.footer__title{
+    color: #fff;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
+.footer__info{
+    font-size: 1.2rem;
+    line-height: 30px;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
 /* Reponsive */
 @media screen and (max-width: 650px) {
     /* Encabezado */
@@ -716,5 +857,227 @@ img{
         width: 100%;
         margin-top: 393px;
         padding-top: 20px;
+    }
+
+    .hero__description{
+        display: block;
+        margin-top: 22px;
+    }
+
+    .hero__wrapper{
+        padding-top: 5%;
+        margin-bottom: 1.5em;
+    }
+
+    .hero__title{
+        width: 50%;
+        font-size: 1.6rem;
+        line-height: 60px;
+    }
+
+    .hero__action{
+        padding: 20px 50px;
+    }
+
+    .frontpage__links{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .frontpage__links-icon{
+        width: 70%;
+        height: 100%;
+    }
+
+    .frontpage__links-description{
+        width: 100%;
+        font-size: 1.1rem;
+        color: #0c0c0c;
+        margin-left: 5px;
+        padding-left: 15px;
+    }
+
+    .links__main{
+        width: 100%;
+        padding: 0;
+    }
+
+    .cta__main{
+        max-width: 90%;
+        margin: 0 auto;
+        margin-top: 80px;
+        margin-bottom: 30px;
+    }
+
+    #internacional{
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .movies, .movie__internacional{
+        display: block;
+        width: 100%;
+        margin-top: 5px;
+    }
+
+    .bay .button{
+        padding-top: 5px;
+        margin: 0 auto;
+        margin-left: 150px;
+    }
+}
+
+/* Reponsive 700 */
+@media screen and (min-width: 700px) {
+    /* Encabezado */
+    header{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    .header-superior{
+        display: flex;
+    }
+
+    /* .container__slider{
+        width: 100%;
+        margin-top: 75px;
+        margin-bottom: 80px;
+    } */
+
+    /* .title{
+        width: 100%;
+        margin-top: 393px;
+        padding-top: 20px;
+    } */
+
+    .hero__description{
+        display: block;
+        margin-top: 22px;
+    }
+
+    .hero__wrapper{
+        padding-top: 5%;
+        margin-bottom: 1.5em;
+    }
+
+    .hero__title{
+        width: 50%;
+        font-size: 1.6rem;
+        line-height: 60px;
+    }
+
+    .hero__action{
+        padding: 20px 50px;
+    }
+
+    .frontpage__links{
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        flex-flow: row nowrap;
+        align-items: flex-start;
+        text-align: center;
+        justify-content: space-between;
+        max-width: 700px;
+    }
+
+    .frontpage__links-icon{
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+    }
+
+    .frontpage__links-description{
+        max-width: 260px;
+        font-size: 1.1rem;
+        color: #0c0c0c;
+    }
+
+    .links__main{
+        padding: 0;
+    }
+
+    .cta__main{
+        max-width: 90%;
+        margin: 0 auto;
+        margin-top: 80px;
+        margin-bottom: 30px;
+    }
+
+    .frontpage__cta-title{
+        width: 100%;
+        margin-left: 500px;
+        padding-bottom: 50px;
+    }
+}
+
+/* Reponsive 1000 */
+@media screen and (min-width: 1000px) {
+    .hero__content{
+        padding: 0 0 40px 0;
+    }
+    
+    .hero__description{
+        font-size: 1.5rem;
+    }
+
+    .hero__wrapper{
+        padding-top: 5%;
+        margin-bottom: 1.5em;
+    }
+
+    .hero__title{
+        width: 50%;
+        font-size: 1.6rem;
+        line-height: 60px;
+    }
+
+    .hero__action{
+        padding: 20px 50px;
+    }
+
+    .frontpage__links{
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        flex-flow: row nowrap;
+        align-items: flex-start;
+        text-align: center;
+        justify-content: space-between;
+        max-width: 700px;
+    }
+
+    .frontpage__links-icon{
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+    }
+
+    .frontpage__links-description{
+        max-width: 260px;
+        font-size: 1.1rem;
+        color: #0c0c0c;
+    }
+
+    .links__main{
+        padding: 0;
+    }
+
+    .cta__main{
+        max-width: 90%;
+        margin: 0 auto;
+        margin-top: 80px;
+        margin-bottom: 30px;
+    }
+
+    .frontpage__cta-title{
+        width: 100%;
+        margin-left: 500px;
+        padding-bottom: 50px;
     }
 }
