--- a/css/style.css
+++ b/css/style.css
@@ -1105,4 +1105,56 @@ img{
         margin: 0 auto;
         padding: 120px 0;
     }
+
+    .row{
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: space-around;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .col__50{
+        max-width: 50%;
+    }
+
+    .footer__cta-container{
+        max-width: 1200px;
+        flex-direction: row;
+        margin: 0 auto;
+        justify-content: space-between;
+    }
+
+    .footer__cta-container .cta__text{
+        max-width: 50%;
+        padding: 0;
+        font-size: 35px;
+    }
+
+    .footer__cta-container .cta__btn{
+        margin-top: 0;
+        font-size: 30px;
+    }
+
+    #page-footer .container{
+        max-width: 1200px;
+        margin: 0 auto;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 70px 0;
+    }
+
+    .footer__menu{
+        max-width: 300px;
+        grid-column: 1/3;
+        grid-row-start: 1;
+        padding-left: 1em;
+    }
+
+    .footer__menu figure{
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        margin-top: 12px;
+    }
 }
